<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/textField_taskName"
        android:layout_alignTop="@+id/textView1"
        android:layout_alignEnd="@+id/addButton" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_marginTop="40dp"
        android:id="@+id/textField_description"
        android:layout_below="@+id/textField_taskName"
        android:layout_alignEnd="@+id/textField_taskName" />

    <TextView
        android:text="@string/adding_task_activity_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textField_description"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2" />

    <TextView
        android:text="@string/adding_task_activity_task_name_title"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:layout_marginTop="89dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/adding_task_activity_priority_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textField_description"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp"
        android:id="@+id/textView4" />

    <TextView
        android:text="@string/adding_task_activity_deadline_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="30dp"
        android:id="@+id/textView5" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignTop="@+id/textView4"
        android:layout_toEndOf="@+id/textView1"
        android:layout_marginStart="30dp"
        android:id="@+id/priorityRadioGroup">

        <RadioButton
            android:text="@string/adding_task_activity_radio_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonHigh"
            android:layout_weight="1"
            android:layout_above="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="13dp" />

        <RadioButton
            android:text="@string/adding_task_activity_radio_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonMedium"
            android:layout_weight="1"
            android:layout_alignBaseline="@+id/radioButtonHigh"
            android:layout_alignBottom="@+id/radioButtonHigh"
            android:layout_alignStart="@+id/textField_taskName" />

        <RadioButton
            android:text="@string/adding_task_activity_radio_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonLow"
            android:layout_weight="1"
            android:layout_alignTop="@+id/textView4"
            android:layout_alignEnd="@+id/textField_description"
            android:layout_marginEnd="17dp" />

    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_below="@+id/priorityRadioGroup"
        android:layout_alignStart="@+id/priorityRadioGroup"
        android:id="@+id/textField_date" />

    <Button
        android:text="@string/adding_task_activity_add_button_title"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:id="@+id/addButton"
        android:layout_below="@+id/textField_date"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:onClick="goToPrevActivity" />

</RelativeLayout>